--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -1,5 +1,6 @@
 body {
   @include container(40rem);
+  overflow-x: hidden;
 }
 
 h1,
